# FoodPlan

./: .dockerignore  .gitignore  Dockerfile  README.md  db.sqlite3  dump.json  pyproject.toml  requirements.txt
.github/workflows/: action.yml
FoodPlan/: settings.py  urls.py
deploy/: .env.example  .env_ci  docker-compose-ci.yml  nginx.conf
recipe/: admin.py  models.py  urls.py  views.py
recipe/management/commands/: import_ingredients.py
recipe/migrations/: 0001_initial.py  0002_ingredient_rename_genre_recipe_diet_and_more.py  0002_initial.py  0002_recipe_image.py  0002_rename_genre_recipe_diet.py  0003_alter_ingredient_options_and_more.py  0003_ingredient_measurementunit_recipeingredient_and_more.py  0003_recipe_dairy_recipe_fish_recipe_honey_recipe_meat_and_more.py  0004_alter_ingredient_measurement.py  0004_alter_ingredient_name.py  0004_subscription.py  0005_measurementunit_weight.py  0005_remove_subscription_meal.py  0006_alter_ingredient_calories.py  0006_subscription_breakfast_subscription_dessert_and_more.py  0007_recipe_description_alter_subscription_breakfast_and_more.py  0008_alter_subscription_user.py
static/css/: style.css
templates/: auth.html  blog.html  card1.html  card2.html  card3.html  contacts.html  index.html  index_sign.html  lk.html  order.html  registration.html  successfully_subscription.html
templates/registration/: password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html
user/: admin.py  forms.py  models.py  urls.py  views.py
user/migrations/: 0001_initial.py
